--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
   		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
   		<version>1.2.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.5</version>
+  	</dependency>
   </dependencies>
 </project>
